--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -22,14 +22,14 @@ jobs:
     
   nodejs-sca-checks:
     uses: inders-poc/centralized-workflows/.github/workflows/nodejs-sca.yml@main
-  image-scan:
-    uses: inders-poc/centralized-workflows/.github/workflows/trivy.yml@main
+#  image-scan:
+#    uses: inders-poc/centralized-workflows/.github/workflows/trivy.yml@main
   
   secret-scanning:
     uses: inders-poc/centralized-workflows/.github/workflows/gitleaks.yml@main
 
-  checkov-scanning:
-    uses: inders-poc/centralized-workflows/.github/workflows/checkov.yml@main
+ # checkov-scanning:
+  #  uses: inders-poc/centralized-workflows/.github/workflows/checkov.yml@main
   nodejs-sast-scanning:
     uses: inders-poc/centralized-workflows/.github/workflows/nodejs-sast.yml@main
 
