--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -36,7 +36,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    needs: [image-scan, nodejs-sca-checks, codeql, secret-scanning, checkov-scanning, nodejs-sast-scanning]
+    needs: [ nodejs-sca-checks, codeql, secret-scanning, nodejs-sast-scanning]
     strategy:
       matrix:
         node-version: [14.x]
