--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -60,27 +60,11 @@ jobs:
     secrets:
       registry_username: ${{secrets.DOCKER_USERNAME}}
       registry_password: ${{secrets.DOCKER_PASSWORD}}
+      
+  update:
+    name: Push to github respository
+    runs-on: ubuntu-latest
+    steps:
+      - name: commit github
+        run: echo done with commit
 
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v3
-# #     - name: Set up QEMU
-# #       uses: docker/setup-qemu-action@v2
-#     - name: Set up Docker Buildx
-#       id: buildx
-#       uses: docker/setup-buildx-action@v2
-#     - name: Docker Login
-#       uses: docker/login-action@v2.0.0
-#       with:
-#         username: ${{ secrets.DOCKER_USERNAME }}
-#         password: ${{ secrets.DOCKER_PASSWORD }}
-#     - name: Build and push Docker images
-#       uses: docker/build-push-action@v3.0.0
-#       with:
-#         context: .
-#         push: true
-#         tags: ipsindersingh/hello-world:latest
-#     - name: Image digest
-#       run: echo ${{ steps.docker_build.outputs.digest }}
