--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - name: Checkout code1
+    - name: Checkout code
       uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
