--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -36,6 +36,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
+    - run: npm test
       
   publish:
     uses: inders-poc/centralized-workflows/.github/workflows/publish.yml@main
