--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -37,6 +37,13 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm test
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()    # run this step even if previous step failed
+      with:
+          name: JEST Tests            # Name of the check run which will be created
+          path: junit.xml    # Path to test results
+          reporter: jest-junit        # Format of test results
       
   publish:
     uses: inders-poc/centralized-workflows/.github/workflows/publish.yml@main
