--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -37,6 +37,8 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm test
+    - uses: ArtiomTr/jest-coverage-report-action@v2
+      name: Test Coverage
     - name: Test Report
       uses: dorny/test-reporter@v1
       if: success() || failure()    
