--- a/.github/workflows/runner.yml
+++ b/.github/workflows/runner.yml
@@ -37,8 +37,10 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm test
-    - uses: ArtiomTr/jest-coverage-report-action@v2
-      name: Test Coverage
+    - uses: ziishaned/jest-reporter-action@v0.0.1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        test-command: "yarn jest --coverage"
     - name: Test Report
       uses: dorny/test-reporter@v1
       if: success() || failure()    
