--- a/.github/workflows/ci-fail-scenario.yaml
+++ b/.github/workflows/ci-fail-scenario.yaml
@@ -24,7 +24,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    needs: [ nodejs-sca-checks, codeql, secret-scanning, nodejs-sast-scanning]
+    needs: [ nodejs-sca-checks, codeql, secret-scanning, nodejs-sast-scanning, image-scan]
     strategy:
       matrix:
         node-version: [14.x]
